# Self-Implementation-of-Project-Tools

designPattern/bridge/: jpg.h  main  main.cpp
designPattern/factory/: CMakeCache.txt  ImageFactory.h  ImageReader.h  main.cpp
designPattern/observer/: Cat.cpp  Cat.h  Dog.cpp  Dog.h  Kid.h  Mistress.cpp  Mistress.h  Mouse.cpp  Mouse.h  cmake_install.cmake  main
designPattern/template_method/: Lib.h  Makefile
designPatterns/bridge/: filter.h
designPatterns/decorator/: addBubble.h  addIce.h  coffee.h  main  milk.h
designPatterns/factory/: CMakeLists.txt
designPatterns/observer/: CMakeCache.txt
designPatterns/singleton/: main.cpp
design_patterns/bridge/: CMakeCache.txt  CMakeLists.txt  Makefile  blur.h  cmake_install.cmake  image.h  png.h  sharp.h
design_patterns/decorator/: CMakeCache.txt  CMakeLists.txt  Makefile  beverage.h  cmake_install.cmake  decorator.h  main.cpp
design_patterns/factory/: JpgFactory.h  Makefile  PngFactory.h  cmake_install.cmake  main
design_patterns/observer/: CMakeLists.txt  Kid.cpp  Makefile  Observer.h  Subject.h  main.cpp
design_patterns/template_method/: App.cpp  App.h  CMakeCache.txt  CMakeLists.txt  Lib.cpp  cmake_install.cmake  main  main.cpp
pool/: main.cpp
pool/ConnectionPool/: main.cpp
serialize_tool/: CMakeLists.txt
serialize_tool/.VSCodeCounter/2023-06-25_22-00-42/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
serialize_tool/file/: 1.txt
serialize_tool/include/: DataStream.cpp  DataStream.h  Serialize.h
serialize_tool/src/: A.h  main.cpp
(+19 files in other folders)
